fixed places/place redirection

--- a/205ledakist/app.yaml
+++ b/205ledakist/app.yaml
@@ -12,7 +12,7 @@ handlers:
   static_files: favicon.ico
   upload: favicon\.ico
 
-- url: /places.*
+- url: /place.*
   script: places.app
 
 - url: /admin/*
